--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:CyYSepkAhCSETuMfVxlsXTScl0+EGkqJcfRX7mMur88=
 APP_DEBUG=true
 APP_URL=http://localhost
+SANCTUM_STATEFUL_DOMAINS=127.0.0.1:5173
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -19,7 +20,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_DOMAIN=localhost
 SESSION_LIFETIME=120
 
